fix(style): add selectors for double buttons as alt, shift

--- a/src/main.css
+++ b/src/main.css
@@ -86,7 +86,8 @@ body {
 .key_enter {
     width: 97.5px;
 }
-.key_shift {
+.key_shift-r,
+.key_shift-l {
     width: 127.5px;
 }
 .key_space {
